// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/table/demo/ajax.md correctly 1`] = `
<div class="ant-table-wrapper">
  <!---->
</div>
`;

exports[`renders ./components/table/demo/basic.md correctly 1`] = `
<div class="ant-table-wrapper">
  <!---->
</div>
`;

exports[`renders ./components/table/demo/bordered.md correctly 1`] = `
<div class="ant-table-wrapper">
  <!---->
</div>
`;

exports[`renders ./components/table/demo/colspan-rowspan.md correctly 1`] = `
<div class="ant-table-wrapper">
  <!---->
</div>
`;

exports[`renders ./components/table/demo/custom-filter-panel.md correctly 1`] = `
<div class="ant-table-wrapper">
  <!---->
</div>
`;

exports[`renders ./components/table/demo/edit-cell.md correctly 1`] = `
<div>
  <button type="button" class="editable-add-btn ant-btn ant-btn-default"><span>Add</span></button>
  <div class="ant-table-wrapper">
    <!---->
  </div>
</div>
`;

exports[`renders ./components/table/demo/edit-row.md correctly 1`] = `
<div class="ant-table-wrapper">
  <!---->
</div>
`;

exports[`renders ./components/table/demo/expand.md correctly 1`] = `
<div class="ant-table-wrapper">
  <!---->
</div>
`;

exports[`renders ./components/table/demo/expand-children.md correctly 1`] = `
<div class="ant-table-wrapper">
  <!---->
</div>
`;

exports[`renders ./components/table/demo/fixed-columns.md correctly 1`] = `
<div class="ant-table-wrapper">
  <!---->
</div>
`;

exports[`renders ./components/table/demo/fixed-columns-header.md correctly 1`] = `
<div class="ant-table-wrapper">
  <!---->
</div>
`;

exports[`renders ./components/table/demo/fixed-header.md correctly 1`] = `
<div class="ant-table-wrapper">
  <!---->
</div>
`;

exports[`renders ./components/table/demo/grouping-columns.md correctly 1`] = `
<div class="ant-table-wrapper">
  <!---->
</div>
`;

exports[`renders ./components/table/demo/head.md correctly 1`] = `
<div class="ant-table-wrapper">
  <!---->
</div>
`;

exports[`renders ./components/table/demo/nested-table.md correctly 1`] = `
<div class="components-table-demo-nested ant-table-wrapper">
  <!---->
</div>
`;

exports[`renders ./components/table/demo/reset-filter.md correctly 1`] = `
<div>
  <div class="table-operations">
    <button type="button" class="ant-btn ant-btn-default"><span>Sort age</span></button>
    <button type="button" class="ant-btn ant-btn-default"><span>Clear filters</span></button>
    <button type="button" class="ant-btn ant-btn-default"><span>Clear filters and sorters</span></button>
  </div>
  <div class="ant-table-wrapper">
    <!---->
  </div>
</div>
`;

exports[`renders ./components/table/demo/row-selection.md correctly 1`] = `
<div class="ant-table-wrapper">
  <!---->
</div>
`;

exports[`renders ./components/table/demo/row-selection-and-operation.md correctly 1`] = `
<div>
  <div style="margin-bottom: 16px;">
    <button type="button" disabled="disabled" class="ant-btn ant-btn-primary"><span>Reload</span></button> <span style="margin-left: 8px;"><!----></span></div>
  <div class="ant-table-wrapper">
    <!---->
  </div>
</div>
`;

exports[`renders ./components/table/demo/row-selection-custom.md correctly 1`] = `
<div class="ant-table-wrapper">
  <!---->
</div>
`;

exports[`renders ./components/table/demo/size.md correctly 1`] = `
<div id="components-table-demo-size">
  <h4>Middle size table</h4>
  <div class="ant-table-wrapper">
    <!---->
  </div>
  <h4>Small size table</h4>
  <div class="ant-table-wrapper">
    <!---->
  </div>
</div>
`;

exports[`renders ./components/table/demo/template.md correctly 1`] = `
<div class="ant-table-wrapper">
  <!---->
</div>
`;
